# libBeresta

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.ru  README.md  README_en.md  ЛИЦЕНЗИЯ
.github/workflows/: cmake.yml  flawfinder.yml  spell-check.yml
.sourcecraft/: ci.yaml
bindings/C/: genc.dj  genc.sh  с-page-sizes.dj
bindings/C/src/: array.h  base.h  consts.h  date.h  destination.h  dict.h  doc.h  doc_compression.h  doc_encoder.h  doc_encoding_utf.h  doc_ext_gstate.h  doc_font.h  doc_info.h  doc_matrix.h  doc_page.h  doc_page_pattern.h  doc_save.h  doc_xobject.h  error.h  ext_gstate.h  font.h  geometry.h  geometry_defines.h  matrix.h  mmgr.h  page.h  page_routines.h  page_xobject.h  pattern.h  stream.h  stream_geometry.h  stream_text.h  structs.h  text.h  text_defines.h  xobject.h
bindings/ecl/: cl-beresta.asd  dash.lisp  ecl-page-sizes-216.dj  ecl-page-sizes.dj  ecl-types.dj  ecl.dj  ecl.sh  exp-ecl-page-sizes-216.dj  exp-ecl-page-sizes.dj  exp-ecl-types.dj  exp-ecl.dj  exp-macro.lisp  load.sh  macro.exp  macro.lisp  minimal.lisp  package.head  package.tail  pattern.lisp  properties.lisp  xobject-circle.lisp  xobject.lisp  xobject_pattern.lisp  xobject_text.lisp  ЛИЦЕНЗИЯ.txt
bindings/ecl/src/: array.lisp  base.lisp  consts.lisp  date.lisp  destination.lisp  dict.lisp  doc.lisp  doc_compression.lisp  doc_encoder.lisp  doc_encoding_utf.lisp  doc_ext_gstate.lisp  doc_font.lisp  doc_info.lisp  doc_matrix.lisp  doc_page.lisp  doc_page_pattern.lisp  doc_save.lisp  doc_xobject.lisp  error.lisp  ext_gstate.lisp  font.lisp  geometry.lisp  geometry_defines.lisp  macro.lisp  matrix.lisp  mmgr.lisp  package.lisp  page.lisp  page_routines.lisp  page_sizes.lisp  page_sizes_216.lisp  page_xobject.lisp  pattern.lisp  stream.lisp  stream_geometry.lisp  stream_text.lisp  structs.lisp  (+4 more)
bindings/sbcl/: ecl-page-sizes.dj  ecl-types.dj  ecl.dj  exp-ecl-types.dj  load.sh  package.head  ЛИЦЕНЗИЯ.txt
config/: brst_config.h.cmake
data/: README.md
data/clang-format/: clang-format.conf
data/fonts/: README.md
data/page-sizes/: brst_page_sizes.sh  brst_page_sizes.template
data/spell/: check-typos.sh  hunspell.dict  typos.toml
demo/: CMakeLists.txt  arc_demo.c  attach.c  circle.c  cli.c  cli.h  clip.c  dates.c  eofill.c  grid_demo.c  grid_sheet.c  grid_sheet.h  handler.c  handler.h  line_demo.c  minimal.c  minimal_empty.c  minimal_text.c  pattern.c  pattern2.c  properties.c  raw_image_demo.c  scissors.c  utf8.c  utils.h  xobject.c  xobject_circle.c  xobject_pattern.c  xobject_text.c  xobject_xobject.c
doc/: STATS.md  ПЛАНЫ.md  РАЗРАБОТКА.md
include/: brst.h  brst_annotation.h  brst_array.h  brst_base.h  brst_conf.h  brst_consts.h  brst_consts_.h  brst_date.h  brst_defines.h  brst_destination.h  brst_dict.h  brst_doc.h  brst_doc_annotation.h  brst_doc_compression.h  brst_doc_embedded_file.h  brst_doc_encoder.h  brst_doc_encoding_cns.h  brst_doc_encoding_cnt.h  brst_doc_encoding_jp.h  brst_doc_encoding_kr.h  brst_doc_encoding_utf.h  brst_doc_ext_gstate.h  brst_doc_font.h  brst_doc_icc_profile.h  brst_doc_image_jpeg.h  brst_doc_image_png.h  brst_doc_image_tiff.h  brst_doc_info.h  brst_doc_matrix.h  brst_doc_outline.h  brst_doc_output_intent.h  brst_doc_page.h  brst_doc_page_pattern.h  brst_doc_page_xobject.h  brst_doc_pattern.h  brst_doc_pdfa.h  brst_doc_save.h  brst_doc_security.h  brst_doc_stream.h  brst_doc_transmatrix.h  (+42 more)
include/private/: brst_annotation.h  brst_array.h  brst_binary.h  brst_boolean.h  brst_c.h  brst_catalog.h  brst_date.h  brst_defines.h  brst_destination.h  brst_dict.h  brst_direct.h  brst_doc.h  brst_doc_encoder.h  brst_doc_encryption.h  brst_doc_font.h  brst_doc_fontdef.h  brst_doc_page.h  brst_doc_page_label.h  brst_doc_pages.h  brst_embedded_file.h  brst_encoder.h  brst_encoder_basic.h  brst_encoder_cmap.h  brst_encoding_cns.h  brst_encoding_cnt.h  brst_encoding_jp.h  brst_encoding_kr.h  brst_encoding_utf.h  brst_encrypt.h  brst_encrypt_dict.h  brst_error.h  brst_ext_gstate.h  brst_font.h  brst_fontdef.h  brst_fontdef_base14.h  brst_fontdef_cid.h  brst_fontdef_cns.h  brst_fontdef_cnt.h  brst_fontdef_jp.h  brst_fontdef_kr.h  (+37 more)
src/: CMakeLists.txt  brst_annotation.c  brst_base.c  brst_date.c  brst_destination.c  brst_doc_annotation.c  brst_doc_compression.c  brst_doc_embedded_file.c  brst_doc_encoder.c  brst_doc_encoding_cns.c  brst_doc_encoding_cnt.c  brst_doc_encoding_jp.c  brst_doc_encoding_kr.c  brst_doc_encoding_utf.c  brst_doc_ext_gstate.c  brst_doc_font.c  brst_doc_font_ttf.c  brst_doc_font_type1.c  brst_doc_fontdef_cns.c  brst_doc_fontdef_cnt.c  brst_doc_fontdef_jp.c  brst_doc_fontdef_kr.c  brst_doc_icc_profile.c  brst_doc_image_jpeg.c  brst_doc_image_png.c  brst_doc_image_tiff.c  brst_doc_info.c  brst_doc_outline.c  brst_doc_output_intent.c  brst_doc_page.c  brst_doc_page_pattern.c  brst_doc_page_xobject.c  brst_doc_pdfa.c  brst_doc_save.c  brst_doc_security.c  brst_doc_stream.c  brst_doc_viewer.c  brst_doc_xobject.c  brst_embedded_file.c  brst_encoder.c  (+13 more)
src/private/: brst_annotation.c  brst_array.c  brst_binary.c  brst_boolean.c  brst_catalog.c  brst_destination.c  brst_dict.c  brst_direct.c  brst_doc.c  brst_doc_encoder.c  brst_doc_encryption.c  brst_doc_font.c  brst_doc_fontdef.c  brst_doc_info.c  brst_doc_pages.c  brst_embedded_file.c  brst_encoder.c  brst_encoder_basic.c  brst_encoder_cmap.c  brst_encoding_cns.c  brst_encoding_cnt.c  brst_encoding_jp.c  brst_encoding_kr.c  brst_encoding_utf.c  brst_encrypt.c  brst_encrypt_dict.c  brst_error.c  brst_ext_gstate.c  brst_font.c  brst_font_cid.c  brst_font_ttf.c  brst_font_type1.c  brst_fontdef.c  brst_fontdef_base14.c  brst_fontdef_cid.c  brst_fontdef_cns.c  brst_fontdef_cnt.c  brst_fontdef_jp.c  brst_fontdef_kr.c  brst_fontdef_ttf.c  (+36 more)
src/private/data/: base14.data  cns.data  cnt.data  encoder_cns.data  encoder_cnt.data  encoder_jp.data  encoder_kr.data  encoding.data  jp.data  kr.data  unicode.glyph.data
src/todo/: README.md  brst_fontdef_ttf.c  brst_u3d.c  brst_u3d.h
tests/: CMakeLists.txt  run.sh  t002_minimal_empty.test  t004_circle.c  t004_circle.data  t004_circle.test
(+19 files in other folders)
